--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,15 @@
 version: 2
 
+python:
+  # Install our python package before building the docs
+  install:
+    - method: pip
+      path: .
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-20.04
   tools:
-    python: "3.9"
-      install:
-        - method: pip
-          path: .
+    python: "3.8"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
