--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,6 +5,8 @@ python:
   install:
     - method: pip
       path: .
+    - requirements: requirements.txt
+      path: 
 # Set the version of Python and other tools you might need
 build:
   os: ubuntu-20.04
