--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,4 @@
-[build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
-
 [project]
-name = "lumache"
-authors = [{name = "Graziella", email = "graziella@lumache"}]
+name = "MoSwA Docs"
+authors = [{name = "Muhammet Celik", email = "a.muhammetcelik@gmail.com"}]
 dynamic = ["version", "description"]
